// $Id$ 

Simplenews Scheduler 6.x-1.x-dev, 2010-04-03
--------------------------------------------
- Major changes according to Date 2 API.
- Additional code cleanup.
- Added scheduled newsletter overview page.
- Fixed a variety of bugs:
    * #713414 by sgabe: Settings are reset on node preview.
    * #728994 by sgabe: Newsletter sent immediately as created.
    * #738318 by sgabe: Attachments are lost in new editions.

Simplenews Scheduler 6.x-1.x-dev, 2009-10-27
--------------------------------------------
- Fixed illegal choice detected bug.
- Better cron interval.

Simplenews Scheduler 6.x-1.x-dev, 2009-10-16
--------------------------------------------
- Fixed missing update procedure.
- Simpler date selection.

Simplenews Scheduler 6.x-1.x-dev, 2009-09-16
--------------------------------------------
- Better code formatting and reviewed code with Coder module.
- Modified taxonomy term saving with taxonomy_node_save() function.
- New features: stop sending based on given date or number of editions.
- Better multilingual support with included translation template.